<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_description_black_18dp"
            android:title="Nuevo Pedido" />

        <item
            android:id="@+id/nav_status_order"
            android:icon="@drawable/ic_query_builder_black_24dp"
            android:title="@string/menuStatusOrder" />

        <item
            android:id="@+id/nav_quality_service"
            android:icon="@drawable/ic_star_half_black_18dp"
            android:title="@string/menuQualityService" />
    </group>

    <item android:title="@string/menuTitle">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/menuSettingsPersonal" />
            <item
                android:id="@+id/nav_cancel_account"
                android:icon="@drawable/ic_delete_forever_black_24dp"
                android:title="@string/menuCancelAccount" />
            <item
                android:id="@+id/nav_sign_off"
                android:icon="@drawable/ic_power_settings_new_black_18dp"
                android:title="@string/menuSignOff" />
        </menu>
    </item>

</menu>
