<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lo_encontrecom.appeniclients.OrderInformationGasFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblOrderDetail"
            android:layout_marginTop="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/titleOrderInformationDetail"
            android:textColor="@android:color/black"
            android:textSize="@dimen/titleSize"
            android:textStyle="normal|bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:id="@+id/icon_cylinder"
                android:src="@drawable/icon_industrial_45kg_activo_xhdpi"
                android:tag="icon_industrial_45kg_activo_xhdpi"/>


            <TextView
                android:id="@+id/txtNumberCylinderSelected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text=""
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding">

            <TextView
                android:id="@+id/txtNumber"
                android:layout_marginTop="35dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Elija el número de tanques "
                android:layout_marginRight="10dp"
                android:textColor="@android:color/black"
                android:textSize="20sp"/>

            <NumberPicker
                android:id="@+id/txtNumberCylinder"
                android:layout_width="25dp"
                android:layout_height="90dp"
                android:scaleX="1.2"
                android:scaleY="1.2"
                android:layout_below="@id/txtNumberCylinderSelected"/>

        </LinearLayout>


        <TextView
            android:id="@+id/lblOrderAddress"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/titleOrderInformationAddress"
            android:textColor="@android:color/black"
            android:textSize="@dimen/titleSize"
            android:textStyle="normal|bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txtAddressActual1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/btnChoose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_btn_lyrics"
                android:text="@string/btnChange"
                android:textSize="@dimen/btnSize"
                android:textColor="@color/colorPrimary"
                android:textStyle="normal|bold" />

            <Button
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:background="@null"/>

        </LinearLayout>



    </LinearLayout>

</FrameLayout>
